feat: add lecture 01

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="tabs">
 
                 <button class="tab active" onclick="showTab('/intro')">Intro</button>
+                <button class="tab" onclick="showTab('/lecture01/transformations')">Lecture 01</button>
                 <button class="tab" onclick="showTab('/exercise01/transformations')">Exercise 01</button>
                 <!-- <button class="tab" onclick="showTab('exercise02')">Exercise 02</button> -->
                 <!-- <button class="tab" onclick="showTab('exercise03')">Exercise 03</button> -->
