--- a/exercise01/transformations.html
+++ b/exercise01/transformations.html
@@ -6,6 +6,16 @@
         <link rel="stylesheet" href="../styles.css">
         <link rel="stylesheet" href="../github-markdown.css">
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+        <script>
+            window.MathJax = {
+                tex: {
+                    inlineMath: [['$', '$'], ['\\(', '\\)']],
+                    displayMath: [['$$', '$$'], ['\\[', '\\]']]
+                }
+            };
+        </script>
     </head>
 
     <body class="transformations">
@@ -27,6 +37,7 @@
                 .then(response => response.text())
                 .then(markdownContent => {
                     document.getElementById('text-content').innerHTML = marked.parse(markdownContent);
+                    MathJax.typesetPromise();
                 })
                 .catch(error => console.error('Error loading markdown:', error));
         </script>
