feat: add scanline lecture

--- a/exercise01/transformations.html
+++ b/exercise01/transformations.html
@@ -28,7 +28,7 @@
     </script>
   </head>
 
-  <body class="transformations">
+  <body class="exercise">
     <h2>Exercise 01 - Transformations</h2>
 
     <div class="container">
