--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <button class="tab" onclick="showTab('/exercise01/transformations')">
           Exercise 01
         </button>
-        <!-- <button class="tab" onclick="showTab('exercise02')">Exercise 02</button> -->
+        <button class="tab" onclick="showTab('/exercise02/scanline')">
+          Exercise 02
+        </button>
         <!-- <button class="tab" onclick="showTab('exercise03')">Exercise 03</button> -->
       </div>
 
